--- a/sass/_register.scss
+++ b/sass/_register.scss
@@ -57,4 +57,10 @@
     	}
     }
     
+    .agendaButtons
+    {
+    	margin-bottom: 1vw;
+    	text-align: center;
+    }
+    
 }
