--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -19319,13 +19319,29 @@ button.close {
   vertical-align: middle;
 }
 
+/*  Trick for equal height columns - Apply to all columns */
 /* line 56, ../sass/_tricks.scss */
 .equal-height, #admin .tab {
   margin-bottom: -99999px;
   padding-bottom: 99999px;
 }
 
-/* line 61, ../sass/_tricks.scss */
+/* Trick for centering vertically a div -> to put in sequence <outer><inner> */
+/* line 63, ../sass/_tricks.scss */
+.outer {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+/* line 70, ../sass/_tricks.scss */
+.inner {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+/* line 75, ../sass/_tricks.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -19334,17 +19350,17 @@ button.close {
   /* 2 */
 }
 
-/* line 67, ../sass/_tricks.scss */
+/* line 81, ../sass/_tricks.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* line 71, ../sass/_tricks.scss */
+/* line 85, ../sass/_tricks.scss */
 .clearfix {
   *zoom: 1;
 }
 
-/* line 75, ../sass/_tricks.scss */
+/* line 89, ../sass/_tricks.scss */
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -19355,29 +19371,29 @@ button.close {
   cursor: default;
 }
 
-/* line 85, ../sass/_tricks.scss */
+/* line 99, ../sass/_tricks.scss */
 .clickable {
   cursor: pointer;
 }
 
-/* line 89, ../sass/_tricks.scss */
+/* line 103, ../sass/_tricks.scss */
 .first {
   margin-left: 0 !important;
 }
 
-/* line 93, ../sass/_tricks.scss */
+/* line 107, ../sass/_tricks.scss */
 .circle-img, #navbar #navbar-profile .navbar-avatar {
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
 
-/* line 99, ../sass/_tricks.scss */
+/* line 113, ../sass/_tricks.scss */
 .square, #courses #tiles-courses .tile, #activities #tiles-activities .tile {
   padding-top: 100%;
   position: relative;
 }
-/* line 103, ../sass/_tricks.scss */
+/* line 117, ../sass/_tricks.scss */
 .square .square-content, #courses #tiles-courses .tile .square-content, #activities #tiles-activities .tile .square-content {
   position: absolute;
   top: 0;
@@ -19386,12 +19402,12 @@ button.close {
   right: 0;
 }
 
-/* line 112, ../sass/_tricks.scss */
+/* line 126, ../sass/_tricks.scss */
 .square-only {
   padding-bottom: 100%;
 }
 
-/* line 117, ../sass/_tricks.scss */
+/* line 131, ../sass/_tricks.scss */
 .container {
   width: auto;
   height: inherit;
@@ -19400,38 +19416,38 @@ button.close {
   padding: 0;
 }
 
-/* line 125, ../sass/_tricks.scss */
+/* line 139, ../sass/_tricks.scss */
 .in-main, #admin, #home #presentation, #home #team #team-wrapper, #courses, #singleCourse, #activities, #media, #contacts, #contacts #contact-form, #payment-disclaimer-modal, #payment, #faqPage, #profile, .modal-wrapper {
   margin-bottom: 3vw;
 }
 @media all and (max-device-width: 1079px) {
-  /* line 125, ../sass/_tricks.scss */
+  /* line 139, ../sass/_tricks.scss */
   .in-main, #admin, #home #presentation, #home #team #team-wrapper, #courses, #singleCourse, #activities, #media, #contacts, #contacts #contact-form, #payment-disclaimer-modal, #payment, #faqPage, #profile, .modal-wrapper {
     width: 80%;
     margin-left: 10%;
   }
 }
 @media all and (max-device-width: 539px) {
-  /* line 125, ../sass/_tricks.scss */
+  /* line 139, ../sass/_tricks.scss */
   .in-main, #admin, #home #presentation, #home #team #team-wrapper, #courses, #singleCourse, #activities, #media, #contacts, #contacts #contact-form, #payment-disclaimer-modal, #payment, #faqPage, #profile, .modal-wrapper {
     width: 96%;
     margin-left: 2%;
   }
 }
 
-/* line 142, ../sass/_tricks.scss */
+/* line 156, ../sass/_tricks.scss */
 .scrollbar-wrapper {
   width: 100%;
   height: 100%;
   overflow-y: hidden;
   position: relative;
 }
-/* line 148, ../sass/_tricks.scss */
+/* line 162, ../sass/_tricks.scss */
 .scrollbar-wrapper .scrollbar {
   padding-right: 26px;
 }
 
-/* line 155, ../sass/_tricks.scss */
+/* line 169, ../sass/_tricks.scss */
 .fa ~ span {
   margin-left: 0.5em;
 }
@@ -20282,6 +20298,10 @@ body {
   }
 }
 
+/* line 4, ../sass/_course.scss */
+#singleCourse .gridster-item {
+  /*         @extend .bg-lightest-grey; */
+}
 /* line 11, ../sass/_course.scss */
 #singleCourse .course-panel-title {
   font-variant: small-caps;
@@ -20294,6 +20314,11 @@ body {
 #singleCourse a {
   text-decoration: none;
   color: inherit;
+}
+/* line 72, ../sass/_course.scss */
+#singleCourse .agendaButtons {
+  margin-bottom: 1vw;
+  text-align: center;
 }
 
 /* line 1, ../sass/_activities.scss */
@@ -20410,6 +20435,11 @@ body {
 /* line 54, ../sass/_register.scss */
 #register .XP .fa ~ span {
   margin-left: 0;
+}
+/* line 60, ../sass/_register.scss */
+#register .agendaButtons {
+  margin-bottom: 1vw;
+  text-align: center;
 }
 
 /* line 1, ../sass/_payment-disclaimer.scss */
